Fixed the top padding on mobile.

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -648,7 +648,6 @@ footer {
     margin-top: 5px;
     margin-left: 0;
     margin-right: 0;
-    padding-top: 10px;
     padding-left: 0;
     padding-right: 0;
   }
